# python-mecab-ko

./: setup.cfg
.github/workflows/: wheels.yml
