[metadata]
name = python-mecab-ko
version = attr: mecab.__version__
url = https://github.com/jonghwanhyeon/python-mecab-ko
author = Jonghwan Hyeon
author_email = jonghwanhyeon93@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: Korean
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Text Processing
    Topic :: Text Processing :: Linguistic
license = BSD 3-Clause License
description = A python binding for mecab-ko
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    mecab
    mecab-ko

[options]
zip_safe = False
install_requires = python-mecab-ko-dic
python_requires = >=3.7
packages = find:

[options.package_data]
mecab =
    mecabrc
    pybind/_mecab/utils.h